<resources>
    <string name="app_name">Scavenger Hunt</string>
    <string name="menu_add_point">Add Point</string>
    <string name="menu_search">Search</string>
    <string name="menu_about_us">View Team</string>
    <string name="menu_about">About</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_show_location">Show Location</string>
    <string name="menu_share_w_email">Share With Email</string>
    <string name="btn_view">View</string>
    <string name="title_activity_maps">Map</string>

    <!--Team member menus-->
    <string name="menu_add_team_member">Add Team Member</string>

    <!-- Add Point -->
    <string name="tvAddPointName">Name: </string>
    <string name="tvAddPointAddress">Address: </string>
    <string name="tvAddPointTask">Task: </string>
    <string name="tvAddPointTags">Tags: </string>
    <string name="tvAddPointRating">Rating: </string>
    <string name="btnAddPoint">Add Point</string>

    <!--maps activity -->
    <string name="btn_directions">Get Directions</string>
    <string name="menu_full_screen">View Full Screen</string>
    <string name="tv_team_member_name">Name</string>
    <string name="tv_team_member_email_label">Email</string>
    <string name="tv_team_member_phone_label">Phone</string>
    <string name="tv_team_member_sms_label">SMS</string>
    <string name="btn_edit_team_member">Edit Team Member</string>

    <!--search activity-->
        <string-array name="search_choices">
            <item>Name</item>
            <item>Tag</item>
        </string-array>
</resources>
