<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPointActivity">

    <TextView
        android:id="@+id/tvAddPointTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add point"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/tvAddPointName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAddPointName"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213" />

    <TextView
        android:id="@+id/tvAddPointAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tvAddPointAddress"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddPointName"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/tvAddPointTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tvAddPointTask"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddPointAddress"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/tvAddPointTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAddPointTags"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddPointTask"
        app:layout_constraintVertical_bias="0.116" />

    <TextView
        android:id="@+id/tvAddPointRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAddPointRating"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddPointTags"
        app:layout_constraintVertical_bias="0.155" />

    <EditText
        android:id="@+id/etAddPointName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toEndOf="@+id/tvAddPointName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />

    <EditText
        android:id="@+id/etAddPointRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toEndOf="@+id/tvAddPointRating"
        app:layout_constraintTop_toBottomOf="@+id/etAddPointTags"
        app:layout_constraintVertical_bias="0.105" />

    <EditText
        android:id="@+id/etAddPointTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/tvAddPointTask"
        app:layout_constraintTop_toBottomOf="@+id/etAddPointAddress"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/etAddPointTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/tvAddPointTags"
        app:layout_constraintTop_toBottomOf="@+id/etAddPointTask"
        app:layout_constraintVertical_bias="0.067" />

    <EditText
        android:id="@+id/etAddPointAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toEndOf="@+id/tvAddPointAddress"
        app:layout_constraintTop_toBottomOf="@+id/etAddPointName"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnAddPoint"
        android:layout_width="163dp"
        android:layout_height="46dp"
        android:text="@string/btnAddPoint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddPointRating"
        app:layout_constraintVertical_bias="0.316" />
</androidx.constraintlayout.widget.ConstraintLayout>